--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "nodejs",
+  "name": "git_login",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "commonjs",
+  "main": "login.js",
   "scripts": {
-    "start": "node ."
+    "login": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "discord-player": "^5.3.2",
-    "discord.js": "^14.7.1",
-    "express": "^4.18.2",
-    "ffmpeg-static": "^5.1.0",
-    "node-fetch": "^3.2.6",
-    "opusscript": "^0.0.8",
-    "slimedb": "^3.3.3",
-    "valid-url": "^1.0.9"
+    "prompt-sync": "^4.2.0"
   }
 }
